deploy: c5e0c2a7829c26b445b1cd608eafc3ba6b1b7bc1

--- a/community/farms/index.html
+++ b/community/farms/index.html
@@ -466,6 +466,7 @@ included in this list, add a comment to <a href="https://github.com/farmOS/farmO
 <li>Patroon Land Farm (Voorheesville, New York)</li>
 <li>Pax Sam Place Urban Permaculture Community (Eugene, Oregon)</li>
 <li>Red Shirt Farm (Lanesborough, Massachusetts)</li>
+<li>Refugia Gardens (Flagstaff, Arizona)</li>
 <li>Satori Farms (Cave Junction, Oregon)</li>
 <li>Silver Market Gardens (Silver City, New Mexico)</li>
 <li>Stone Grown Farm (Mansfield, Connecticut)</li>
