deploy: 8a13080c2fe3a9fead71fc1086cf72bcf027f1e2

--- a/community/farms/index.html
+++ b/community/farms/index.html
@@ -458,6 +458,7 @@ included in this list, add a comment to <a href="https://github.com/farmOS/farmO
 <li>Grocholl and Sons Farms (Harrison, Illinois)</li>
 <li>Hampton Plantation (Owings, Maryland)</li>
 <li>Heniscity Farm (Pegram, Tennessee)</li>
+<li>Hesselridge Farm (Rochester, Washington)</li>
 <li>Lokoea Farms (Haleiwa, Hawai&#699;i)</li>
 <li>Miles Smith Farm (Loudon, New Hampshire)</li>
 <li>Monarca Farm (Lajas, Puerto Rico)</li>
