--- a/development/projects/index.html
+++ b/development/projects/index.html
@@ -462,6 +462,8 @@ added to extend your farmOS functionality:</p>
   for creating egg harvest logs.</li>
 <li><strong><a href="https://github.com/farmOS/farm_maple">Farm Maple</a></strong> - Features for
   management of maple tapping and production.</li>
+<li><strong><a href="https://github.com/bonushenricus/farm_map_emrom">Farm Map: Emilia-Romagna</a></strong> -
+  Emilia-Romagna map layers for farmOS maps.</li>
 <li><strong><a href="https://github.com/rkioski/farm_map_fi">Farm Map: Finland</a></strong> - Finnish map
   layers for farmOS maps.</li>
 <li><strong><a href="https://github.com/farmOS/farm_map_no">Farm Map: Norway</a></strong> - Norwegian map
