--- a/hosting/installing/index.html
+++ b/hosting/installing/index.html
@@ -401,9 +401,10 @@ enhancements if they are available.</p>
   together provide advanced geographic query capabilities. See
   <a href="https://github.com/farmOS/farmOS/issues/43">GitHub issue #43</a> for more information.</li>
 <li><strong>SSL</strong> Although not strictly a requirement, some features (like the
-  "Geolocate" button on maps) will only work when over a secure connection. SSL
-  is also recommended if you are using the Sensor Listener module to keep your
-  sensor's private key a secret.</li>
+  "Geolocate" button on maps) will only work when over a secure connection.
+  <a href="/guide/app">Field Kit</a> requires SSL on your farmOS instance in order to connect to it.
+  SSL is also recommended if you are using the Sensor Listener module to keep
+  your sensor's private key a secret.</li>
 </ul></div>
             </div>
         </div>
