--- a/development/projects/index.html
+++ b/development/projects/index.html
@@ -468,6 +468,8 @@ added to extend your farmOS functionality:</p>
   layers for farmOS maps.</li>
 <li><strong><a href="https://github.com/farmOS/farm_map_no">Farm Map: Norway</a></strong> - Norwegian map
   layers for farmOS maps.</li>
+<li><strong><a href="https://github.com/symbioquine/farm_map_sjc">Farm Map: SJC</a></strong> - San Juan
+  County, WA, USA map layers for farmOS maps.</li>
 <li><strong><a href="https://github.com/farmOS/farm_mushroom">Farm Mushroom</a></strong> - Features for
   managing mushroom production.</li>
 <li><strong><a href="https://github.com/almostengr/farmosnws">FarmOS NWS</a></strong> - Imports data
