deploy: 2e7a033cf1faf139b2d42ecf0ac640bdb620f1eb

--- a/development/projects/index.html
+++ b/development/projects/index.html
@@ -493,6 +493,8 @@ Drupal theme based off of <a href="https://drupal.org/project/bootstrap">Bootstr
 <li><strong><a href="https://github.com/symbioquine/farm-os-area-feature-proxy">farmOS Area Feature Proxy</a></strong> - Exposes FarmOS
   areas as a <a href="https://www.opengeospatial.org/standards/wfs">Web Feature Service (WFS)</a> enabling bi-directional access
   through full-fledged GIS tools like <a href="https://qgis.org/">Quantum GIS</a>.</li>
+<li><strong><a href="https://github.com/komatek21/Ansible_FarmOS">Ansible farmOS</a></strong> - Ansible playbooks for provisioning a farmOS server on
+  Debian 9.</li>
 </ul></div>
             </div>
         </div>
