--- a/community/farms/index.html
+++ b/community/farms/index.html
@@ -456,6 +456,7 @@ included in this list, add a comment to <a href="https://github.com/farmOS/farmO
 <li>FoodScaping Permaculture Farm (Cheshire, Oregon)</li>
 <li>Golden Avenue Urban Permaculture Farm (Eugene, Oregon)</li>
 <li>Grocholl and Sons Farms (Harrison, Illinois)</li>
+<li>Guard Well Farm (Holualoa, Hawai&#699;i)</li>
 <li>Hampton Plantation (Owings, Maryland)</li>
 <li>Heniscity Farm (Pegram, Tennessee)</li>
 <li>Hesselridge Farm (Rochester, Washington)</li>
