deploy: 047b00026206f53e94efe3aa7f6c0ce90e9115a2

--- a/community/farms/index.html
+++ b/community/farms/index.html
@@ -515,7 +515,7 @@ included in this list, add a comment to <a href="https://github.com/farmOS/farmO
                 </p>
                 <form>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
+                        <input type="search" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
                     </div>
                 </form>
                 <div id="mkdocs-search-results"></div>
