--- a/guide/assets/compost/index.html
+++ b/guide/assets/compost/index.html
@@ -360,7 +360,7 @@ harvests, etc. The compost asset can be used to represent a compost pile,
                 </p>
                 <form>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
+                        <input type="search" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
                     </div>
                 </form>
                 <div id="mkdocs-search-results"></div>
