--- a/guide/assets/sensors/index.html
+++ b/guide/assets/sensors/index.html
@@ -488,7 +488,7 @@ to a Nextel subscriber with the phone number <code>232-232-2323</code>, you woul
                 </p>
                 <form>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
+                        <input type="search" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
                     </div>
                 </form>
                 <div id="mkdocs-search-results"></div>
