--- a/community/contribute/index.html
+++ b/community/contribute/index.html
@@ -415,7 +415,7 @@ we'll get done! Feel free to jump into the <a href="/development/issue-queues">i
                 </p>
                 <form>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
+                        <input type="search" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
                     </div>
                 </form>
                 <div id="mkdocs-search-results"></div>
