--- a/development/architecture/index.html
+++ b/development/architecture/index.html
@@ -412,7 +412,7 @@ them different <a href="/guide/people">levels of permission</a>.</p></div>
                 </p>
                 <form>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
+                        <input type="search" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
                     </div>
                 </form>
                 <div id="mkdocs-search-results"></div>
