--- a/development/configure-local-https-reverse-proxy/index.html
+++ b/development/configure-local-https-reverse-proxy/index.html
@@ -454,7 +454,7 @@ drush site-install farm --locale=us --db-url=mysql://farm:farm@db/farm --site-na
                 </p>
                 <form>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
+                        <input type="search" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
                     </div>
                 </form>
                 <div id="mkdocs-search-results"></div>
