--- a/development/issue-queues/index.html
+++ b/development/issue-queues/index.html
@@ -372,7 +372,7 @@ or copied to Drupal.org and integrated into the roadmap.</p>
                 </p>
                 <form>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
+                        <input type="search" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
                     </div>
                 </form>
                 <div id="mkdocs-search-results"></div>
