--- a/development/projects/index.html
+++ b/development/projects/index.html
@@ -525,7 +525,7 @@ Drupal theme based off of <a href="https://drupal.org/project/bootstrap">Bootstr
                 </p>
                 <form>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
+                        <input type="search" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
                     </div>
                 </form>
                 <div id="mkdocs-search-results"></div>
