--- a/development/release/index.html
+++ b/development/release/index.html
@@ -353,6 +353,7 @@ are taken.</p>
   not the patch is still necessary (e.g. <a href="https://github.com/farmOS/farmOS/commit/7d2e30a9d9e69baa508c3dddb4d79c68b0fc7120">farmOS/farmOS@7d2e30a</a>)</li>
 </ul>
 </li>
+<li>Ensure that the <a href="https://github.com/farmOS/farmOS/actions">7.x-1.x Build Test GitHub Action</a> is building successfully.</li>
 <li>Ensure that the <a href="https://hub.docker.com/r/farmos/farmos/builds">7.x-1.x Docker Hub image</a> is building successfully.</li>
 <li>Test all update hooks</li>
 <li>Test fresh Drush make build and installation</li>
@@ -447,7 +448,7 @@ are taken.</p>
                 </p>
                 <form>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
+                        <input type="search" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
                     </div>
                 </form>
                 <div id="mkdocs-search-results"></div>
