--- a/development/update-safety/index.html
+++ b/development/update-safety/index.html
@@ -374,7 +374,7 @@ the <a href="/development/issue-queues">farmOS issue queues</a> and suggest your
                 </p>
                 <form>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
+                        <input type="search" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
                     </div>
                 </form>
                 <div id="mkdocs-search-results"></div>
