--- a/faq/index.html
+++ b/faq/index.html
@@ -544,7 +544,7 @@ language, open an issue in the <a href="/development/issue-queues">issue queues<
                 </p>
                 <form>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
+                        <input type="search" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
                     </div>
                 </form>
                 <div id="mkdocs-search-results"></div>
