--- a/guide/contrib/eggs/index.html
+++ b/guide/contrib/eggs/index.html
@@ -370,7 +370,7 @@ quantity, and asset reference fields filled in automatically.</p></div>
                 </p>
                 <form>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
+                        <input type="search" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
                     </div>
                 </form>
                 <div id="mkdocs-search-results"></div>
