--- a/guide/contrib/forest/index.html
+++ b/guide/contrib/forest/index.html
@@ -364,7 +364,7 @@ an individual plan, or in the larger context of other farm operations.</p></div>
                 </p>
                 <form>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
+                        <input type="search" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
                     </div>
                 </form>
                 <div id="mkdocs-search-results"></div>
