--- a/guide/contrib/produce-safety/index.html
+++ b/guide/contrib/produce-safety/index.html
@@ -485,7 +485,7 @@ activity log with the "Produce Safety" category applied.</p></div>
                 </p>
                 <form>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
+                        <input type="search" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
                     </div>
                 </form>
                 <div id="mkdocs-search-results"></div>
