--- a/guide/export/index.html
+++ b/guide/export/index.html
@@ -408,7 +408,7 @@ information. Asset location needs to be set manually after assets are imported.<
                 </p>
                 <form>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
+                        <input type="search" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
                     </div>
                 </form>
                 <div id="mkdocs-search-results"></div>
