--- a/guide/import/index.html
+++ b/guide/import/index.html
@@ -463,7 +463,7 @@ sensitive (so "Yes" and "yes" will be treated the same).</p>
                 </p>
                 <form>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
+                        <input type="search" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
                     </div>
                 </form>
                 <div id="mkdocs-search-results"></div>
