--- a/guide/inventory/index.html
+++ b/guide/inventory/index.html
@@ -371,7 +371,7 @@ view a list of all logs that have adjusted the asset's inventory in the past
                 </p>
                 <form>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
+                        <input type="search" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
                     </div>
                 </form>
                 <div id="mkdocs-search-results"></div>
