--- a/guide/people/index.html
+++ b/guide/people/index.html
@@ -437,7 +437,7 @@ see <a href="https://github.com/farmOS/farmOS/blob/7.x-1.x/modules/farm/farm_acc
                 </p>
                 <form>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
+                        <input type="search" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
                     </div>
                 </form>
                 <div id="mkdocs-search-results"></div>
