--- a/hosting/updating/index.html
+++ b/hosting/updating/index.html
@@ -408,7 +408,7 @@ following procedure will ensure that your update goes smoothly.</p>
                 </p>
                 <form>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
+                        <input type="search" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
                     </div>
                 </form>
                 <div id="mkdocs-search-results"></div>
