--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ and how to contribute back to the project.</p>
                 </p>
                 <form>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
+                        <input type="search" class="form-control" placeholder="Search..." id="mkdocs-search-query" title="Type search term here">
                     </div>
                 </form>
                 <div id="mkdocs-search-results"></div>
@@ -500,6 +500,6 @@ and how to contribute back to the project.</p>
 </html>
 
 <!--
-MkDocs version : 1.1
-Build Date UTC : 2020-05-08 11:44:21
+MkDocs version : 1.1.2
+Build Date UTC : 2020-05-20 20:27:56.124658+00:00
 -->
