deploy: e677e8b5638cd90e9051d66783036548d03f3fe9

--- a/development/projects/index.html
+++ b/development/projects/index.html
@@ -385,6 +385,7 @@ with <a href="http://www.drush.org">Drush</a> or use <a href="/development/docke
   pairs) properties to assets.</li>
 <li><strong>Farm Asset Views</strong> - Default Views of farm assets.</li>
 <li><strong>Farm Calendar</strong> - Provides a calendar view of farmOS logs.</li>
+<li><strong>Farm Client</strong> - Integrates the farmOS server and client.</li>
 <li><strong>Farm Constraint</strong> - Provides a framework for managing foreign key
   constraints between farmOS entities.</li>
 <li><strong>Farm Crop</strong> - Features for managing farm crops.</li>
@@ -420,6 +421,7 @@ with <a href="http://www.drush.org">Drush</a> or use <a href="/development/docke
 <li><strong>Farm Map KML</strong> - Provides KML features for farm maps.</li>
 <li><strong>Farm MapKnitter</strong> - Provides integration with Public Lab's MapKnitter.org.</li>
 <li><strong>Farm Menu</strong> - Provides a menu for farm pages.</li>
+<li><strong>Farm Metrics</strong> - Allow modules to define high level metrics.</li>
 <li><strong>Farm Movement</strong> - Provides movement field and related asset location code.</li>
 <li><strong>Farm People</strong> - A view of people associated with the farm.</li>
 <li><strong>Farm Plan</strong> - A farm plan entity type.</li>
@@ -441,8 +443,6 @@ with <a href="http://www.drush.org">Drush</a> or use <a href="/development/docke
 <li><strong>Farm Soil Test</strong> - .Features for managing soil tests.</li>
 <li><strong>Farm Soil: Compost</strong> - Features for managing compost.</li>
 <li><strong>Farm Term</strong> - Provides helper functions for working with taxonomy terms.</li>
-<li><strong>Farm Tour</strong> - Provides tours of the farmOS system using the Bootstrap Tour
-  module.</li>
 <li><strong>Farm UI</strong> - Provides standardized user interface support to farmOS modules.</li>
 <li><strong>Farm Water</strong> - Provides features for water management.</li>
 <li><strong>Farm Water Test</strong> - Features for managing water tests.</li>
