deploy: f4eeacd14776a047cf2a7c0c977183e4157a3efa

--- a/hosting/installing/index.html
+++ b/hosting/installing/index.html
@@ -404,7 +404,15 @@ enhancements if they are available.</p>
   "Geolocate" button on maps) will only work when over a secure connection.
   <a href="/guide/app">Field Kit</a> requires SSL on your farmOS instance in order to connect to it.
   SSL is also recommended if you are using the Sensor Listener module to keep
-  your sensor's private key a secret.</li>
+  your sensor's private key a secret. These resources may be helpful for 
+  configuring SSL:<ul>
+<li><a href="https://www.drupal.org/https-information">Drupal HTTPS Information</a></li>
+<li><a href="https://farmos.discourse.group/t/running-behind-reverse-proxy/108">Reverse Proxy Forum Post</a> - Includes links to related GitHub issues and 
+examples of how others have configured reverse proxies forcing HTTPS.</li>
+<li><a href="/development/configure-local-https-reverse-proxy">Configuring a Local Https Reverse Proxy</a> - Documentation on configuring
+SSL for local development.</li>
+</ul>
+</li>
 </ul></div>
             </div>
         </div>
