deploy: 06821c5b12094636aeb762175e3989984fd3ae04

--- a/index.html
+++ b/index.html
@@ -348,9 +348,9 @@ other ways.</p>
 <li><a href="/community/monthly-call">Monthly call</a></li>
 <li>Forum: <a href="https://farmOS.discourse.group">https://farmOS.discourse.group</a></li>
 <li>Chat:<ul>
-<li>Riot.im:<ul>
-<li><a href="https://riot.im/app/#/room/#farmOS:matrix.org">#farmOS on Matrix.org</a> (bridged to #farmOS IRC room on Freenode)</li>
-<li><a href="https://riot.im/app/#/room/#fiot:matrix.org">#FIot on Matrix.org</a> (Farm Internet of Things)</li>
+<li>Matrix:<ul>
+<li><a href="https://matrix.to/#/#farmOS:matrix.org">#farmOS on Matrix.org</a> (bridged to #farmOS IRC room on Freenode)</li>
+<li><a href="https://matrix.to/#/#fiot:matrix.org">#FIot on Matrix.org</a> (Farm Internet of Things)</li>
 </ul>
 </li>
 <li>IRC: <a href="http://webchat.freenode.net/?channels=#farmOS">#farmOS on Freenode</a> (requires a registered name)</li>
@@ -501,5 +501,5 @@ and how to contribute back to the project.</p>
 
 <!--
 MkDocs version : 1.1.2
-Build Date UTC : 2020-07-21 12:42:10.936644+00:00
+Build Date UTC : 2020-07-23 21:06:33.912159+00:00
 -->
