deploy: 7ddf44acba117b549c8bde8aa1fdaa65dbc6bdc2

--- a/faq/index.html
+++ b/faq/index.html
@@ -411,6 +411,10 @@ your data. You also have full access to the code that is storing and using that
 data! Why? Because farmOS is free open source software developed by a community
 of farmOS users.</p>
 <blockquote>
+<p>I see a security update warning. What should I do?</p>
+</blockquote>
+<p>Please follow the instructions in <a href="/hosting/updating/">Updating farmOS</a></p>
+<blockquote>
 <p>Where do I get support if I have questions?</p>
 </blockquote>
 <p>The <a href="https://farmOS.discourse.group">farmOS Community Forum</a> is a great place to ask questions and learn from
