--- a/hosting/localization/index.html
+++ b/hosting/localization/index.html
@@ -331,6 +331,12 @@
 <p>Enable <strong>Locale</strong> module</p>
 </li>
 <li>
+<ul>
+<li>Download and enable <strong>Localization_update</strong> module (https://www.drupal.org/project/l10n_update), For example, using drush:</li>
+</ul>
+<p><code>drush en l10n_update</code></p>
+</li>
+<li>
 <p>Add your language at <em>/admin/config/regional/language</em></p>
 <ul>
 <li>Set this new language as default language, if desired.</li>
@@ -338,11 +344,7 @@
 </ul>
 </li>
 <li>
-<p>Download and enable <strong>Localization_update</strong> module (https://www.drupal.org/project/l10n_update), For example, using drush:</p>
-<p><code>drush en l10n_update</code></p>
-</li>
-<li>
-<p>Configure it at <em>/admin/config/regional/language/update</em></p>
+<p>Configure the Localization_update Module at <em>/admin/config/regional/language/update</em></p>
 </li>
 <li>
 <p>Suggested:</p>
