deploy: 08da55a232584cdde322009aa92c7d20d7e41e40

--- a/hosting/installing/index.html
+++ b/hosting/installing/index.html
@@ -374,7 +374,7 @@ information on installing Drupal, see the official <a href="https://drupal.org/d
 enhancements if they are available.</p>
 <ul>
 <li><strong>Google Maps and/or MapBox API keys</strong> are necessary for rendering the Google
-  Maps and MapBox base layers in farmOS maps. See the [API keys] instructions
+  Maps and MapBox base layers in farmOS maps. See the <a href="/hosting/apikeys">API keys</a> instructions
   for more information about how to set this up. If API keys are not provided,
   <a href="https://www.openstreetmap.org">OpenStreetMap</a> will be used as the default base layer.</li>
 <li><strong><a href="http://php.net/manual/en/book.bc.php">PHP BCMath extension</a></strong> is required for accurate geometric polygon area
