deploy: 6464766b197f6b926548726510ccb89a7be2858b

--- a/guide/contrib/index.html
+++ b/guide/contrib/index.html
@@ -333,7 +333,9 @@ here, you can fork the <a href="https://github.com/farmOS/farmOS.org">farmOS.org
 request.</p>
 <ul>
 <li><a href="/guide/contrib/eggs">Eggs</a></li>
-<li><a href="/guide/contrib/nutrient">Nutrient management</a></li>
+<li><a href="/guide/contrib/forest">Forest</a></li>
+<li><a href="/guide/contrib/grazing">Grazing</a></li>
+<li>[Nutrient]</li>
 <li><a href="/guide/contrib/organic">Organic</a></li>
 <li><a href="/guide/contrib/produce-safety">Produce Safety</a></li>
 </ul></div>
