deploy: 9fa574bba3afade345fefc46290b17887b939fac

--- a/guide/contrib/index.html
+++ b/guide/contrib/index.html
@@ -335,7 +335,7 @@ request.</p>
 <li><a href="/guide/contrib/eggs">Eggs</a></li>
 <li><a href="/guide/contrib/forest">Forest</a></li>
 <li><a href="/guide/contrib/grazing">Grazing</a></li>
-<li>[Nutrient]</li>
+<li><a href="/guide/contrib/nutrient">Nutrient</a></li>
 <li><a href="/guide/contrib/organic">Organic</a></li>
 <li><a href="/guide/contrib/produce-safety">Produce Safety</a></li>
 </ul></div>
