--- a/guide/contrib/index.html
+++ b/guide/contrib/index.html
@@ -156,6 +156,10 @@
 <li>
     <a href="produce-safety/" class="dropdown-item">Produce Safety</a>
 </li>
+            
+<li>
+    <a href="quick-weight/" class="dropdown-item">Quick Weight Form</a>
+</li>
     </ul>
   </li>
                                 </ul>
@@ -334,6 +338,7 @@ request.</p>
 <li><a href="/guide/contrib/nutrient">Nutrient</a></li>
 <li><a href="/guide/contrib/organic">Organic</a></li>
 <li><a href="/guide/contrib/produce-safety">Produce Safety</a></li>
+<li><a href="/guide/contrib/quick-weight">Weight Quick Form</a></li>
 </ul></div>
             </div>
         </div>
