--- a/guide/contrib/produce-safety/index.html
+++ b/guide/contrib/produce-safety/index.html
@@ -156,6 +156,10 @@
 <li>
     <a href="./" class="dropdown-item active">Produce Safety</a>
 </li>
+            
+<li>
+    <a href="../quick-weight/" class="dropdown-item">Quick Weight Form</a>
+</li>
     </ul>
   </li>
                                 </ul>
@@ -287,7 +291,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a rel="next" href="../../../hosting/" class="nav-link">
+                                <a rel="next" href="../quick-weight/" class="nav-link">
                                     Next <i class="fa fa-arrow-right"></i>
                                 </a>
                             </li>
