--- a/faq/index.html
+++ b/faq/index.html
@@ -156,6 +156,10 @@
 <li>
     <a href="../guide/contrib/produce-safety/" class="dropdown-item">Produce Safety</a>
 </li>
+            
+<li>
+    <a href="../guide/contrib/quick-weight/" class="dropdown-item">Quick Weight Form</a>
+</li>
     </ul>
   </li>
                                 </ul>
