--- a/guide/contrib/nutrient/index.html
+++ b/guide/contrib/nutrient/index.html
@@ -156,6 +156,10 @@
 <li>
     <a href="../produce-safety/" class="dropdown-item">Produce Safety</a>
 </li>
+            
+<li>
+    <a href="../quick-weight/" class="dropdown-item">Quick Weight Form</a>
+</li>
     </ul>
   </li>
                                 </ul>
