--- a/index.html
+++ b/index.html
@@ -156,6 +156,10 @@
 <li>
     <a href="guide/contrib/produce-safety/" class="dropdown-item">Produce Safety</a>
 </li>
+            
+<li>
+    <a href="guide/contrib/quick-weight/" class="dropdown-item">Quick Weight Form</a>
+</li>
     </ul>
   </li>
                                 </ul>
@@ -497,5 +501,5 @@ and how to contribute back to the project.</p>
 
 <!--
 MkDocs version : 1.1.2
-Build Date UTC : 2020-11-25 15:51:04.037355+00:00
+Build Date UTC : 2020-11-25 17:14:39.008885+00:00
 -->
