deploy: 4417431d8eca962c7fac2bf013f278c55a653cb2

--- a/development/projects/index.html
+++ b/development/projects/index.html
@@ -464,6 +464,8 @@ added to extend your farmOS functionality:</p>
   management of maple tapping and production.</li>
 <li><strong><a href="https://github.com/bonushenricus/farm_map_emrom">Farm Map: Emilia-Romagna</a></strong> -
   Emilia-Romagna map layers for farmOS maps.</li>
+<li><strong><a href="https://github.com/Sidiox/farm_map_pdok">Farm Map: PDOK</a></strong> -
+  Dutch PDOK map layers for farmOS maps.</li>
 <li><strong><a href="https://github.com/rkioski/farm_map_fi">Farm Map: Finland</a></strong> - Finnish map
   layers for farmOS maps.</li>
 <li><strong><a href="https://github.com/farmOS/farm_map_no">Farm Map: Norway</a></strong> - Norwegian map
