deploy: 266a00fca6009bd0036a6abfad3370baf452a5de

--- a/index.html
+++ b/index.html
@@ -349,11 +349,11 @@ other ways.</p>
 <li>Forum: <a href="https://farmOS.discourse.group">https://farmOS.discourse.group</a></li>
 <li>Chat:<ul>
 <li>Matrix:<ul>
-<li><a href="https://matrix.to/#/#farmOS:matrix.org">#farmOS on Matrix.org</a> (bridged to #farmOS IRC room on Freenode)</li>
+<li><a href="https://matrix.to/#/#farmOS:matrix.org">#farmOS on Matrix.org</a> (bridged to #farmOS IRC room on Libera.chat)</li>
 <li><a href="https://matrix.to/#/#fiot:matrix.org">#FIot on Matrix.org</a> (Farm Internet of Things)</li>
 </ul>
 </li>
-<li>IRC: <a href="http://webchat.freenode.net/?channels=#farmOS">#farmOS on Freenode</a> (requires a registered name)</li>
+<li>IRC: <a href="https://web.libera.chat/?channels=#farmOS">#farmOS on Libera.chat</a> (requires a registered name)</li>
 </ul>
 </li>
 <li>Code repositories:<ul>
@@ -498,5 +498,5 @@ and how to contribute back to the project.</p>
 
 <!--
 MkDocs version : 1.2.1
-Build Date UTC : 2021-06-11 12:33:42.750876+00:00
+Build Date UTC : 2021-06-30 09:57:37.643527+00:00
 -->
