--- a/community/farms/index.html
+++ b/community/farms/index.html
@@ -503,6 +503,7 @@ included in this list, add a comment to <a href="https://github.com/farmOS/farmO
 <li>Pax Sam Place Urban Permaculture Community (Eugene, Oregon)</li>
 <li>Red Shirt Farm (Lanesborough, Massachusetts)</li>
 <li>Refugia Gardens (Flagstaff, Arizona)</li>
+<li>Right Mind Ag, Inc. (Sterling, Illinois)</li>
 <li>Satori Farms (Cave Junction, Oregon)</li>
 <li>Silver Market Gardens (Silver City, New Mexico)</li>
 <li>Stone Grown Farm (Mansfield, Connecticut)</li>
