deploy: f20e813151c7c87951ea5fa1b805fa47a761608a

--- a/guide/assets/compost/index.html
+++ b/guide/assets/compost/index.html
@@ -344,6 +344,7 @@ harvests, etc. The compost asset can be used to represent a compost pile,
                 shortcuts = {"help": 191, "next": 78, "previous": 80, "search": 83};
         </script>
         <script src="../../../js/base.js" defer></script>
+        <script src="../../../deprecated.js" defer></script>
         <script src="../../../search/main.js" defer></script>
 
         <div class="modal" id="mkdocs_search_modal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel" aria-hidden="true">
