--- a/guide/assets/sensors/index.html
+++ b/guide/assets/sensors/index.html
@@ -500,6 +500,7 @@ to a Nextel subscriber with the phone number <code>232-232-2323</code>, you woul
                 shortcuts = {"help": 191, "next": 78, "previous": 80, "search": 83};
         </script>
         <script src="../../../js/base.js" defer></script>
+        <script src="../../../deprecated.js" defer></script>
         <script src="../../../search/main.js" defer></script>
 
         <div class="modal" id="mkdocs_search_modal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel" aria-hidden="true">
