--- a/community/farms/index.html
+++ b/community/farms/index.html
@@ -526,6 +526,7 @@ included in this list, add a comment to <a href="https://github.com/farmOS/farmO
                 shortcuts = {"help": 191, "next": 78, "previous": 80, "search": 83};
         </script>
         <script src="../../js/base.js" defer></script>
+        <script src="../../deprecated.js" defer></script>
         <script src="../../search/main.js" defer></script>
 
         <div class="modal" id="mkdocs_search_modal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel" aria-hidden="true">
