--- a/community/press/index.html
+++ b/community/press/index.html
@@ -457,6 +457,7 @@ Global Collaborative Launches OpenTEAM to Address Soil Health and Mitigate Clima
                 shortcuts = {"help": 191, "next": 78, "previous": 80, "search": 83};
         </script>
         <script src="../../js/base.js" defer></script>
+        <script src="../../deprecated.js" defer></script>
         <script src="../../search/main.js" defer></script>
 
         <div class="modal" id="mkdocs_search_modal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel" aria-hidden="true">
