--- a/development/configure-local-https-reverse-proxy/index.html
+++ b/development/configure-local-https-reverse-proxy/index.html
@@ -431,6 +431,7 @@ drush site-install farm --locale=us --db-url=mysql://farm:farm@db/farm --site-na
                 shortcuts = {"help": 191, "next": 78, "previous": 80, "search": 83};
         </script>
         <script src="../../js/base.js" defer></script>
+        <script src="../../deprecated.js" defer></script>
         <script src="../../search/main.js" defer></script>
 
         <div class="modal" id="mkdocs_search_modal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel" aria-hidden="true">
