--- a/development/projects/index.html
+++ b/development/projects/index.html
@@ -502,6 +502,7 @@ Drupal theme based off of <a href="https://drupal.org/project/bootstrap">Bootstr
                 shortcuts = {"help": 191, "next": 78, "previous": 80, "search": 83};
         </script>
         <script src="../../js/base.js" defer></script>
+        <script src="../../deprecated.js" defer></script>
         <script src="../../search/main.js" defer></script>
 
         <div class="modal" id="mkdocs_search_modal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel" aria-hidden="true">
