--- a/faq/index.html
+++ b/faq/index.html
@@ -532,6 +532,7 @@ language, open an issue in the <a href="/development/issue-queues">issue queues<
                 shortcuts = {"help": 191, "next": 78, "previous": 80, "search": 83};
         </script>
         <script src="../js/base.js" defer></script>
+        <script src="../deprecated.js" defer></script>
         <script src="../search/main.js" defer></script>
 
         <div class="modal" id="mkdocs_search_modal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel" aria-hidden="true">
