--- a/guide/contrib/forest/index.html
+++ b/guide/contrib/forest/index.html
@@ -348,6 +348,7 @@ an individual plan, or in the larger context of other farm operations.</p></div>
                 shortcuts = {"help": 191, "next": 78, "previous": 80, "search": 83};
         </script>
         <script src="../../../js/base.js" defer></script>
+        <script src="../../../deprecated.js" defer></script>
         <script src="../../../search/main.js" defer></script>
 
         <div class="modal" id="mkdocs_search_modal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel" aria-hidden="true">
