--- a/guide/contrib/produce-safety/index.html
+++ b/guide/contrib/produce-safety/index.html
@@ -469,6 +469,7 @@ activity log with the "Produce Safety" category applied.</p></div>
                 shortcuts = {"help": 191, "next": 78, "previous": 80, "search": 83};
         </script>
         <script src="../../../js/base.js" defer></script>
+        <script src="../../../deprecated.js" defer></script>
         <script src="../../../search/main.js" defer></script>
 
         <div class="modal" id="mkdocs_search_modal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel" aria-hidden="true">
