--- a/guide/people/index.html
+++ b/guide/people/index.html
@@ -421,6 +421,7 @@ see <a href="https://github.com/farmOS/farmOS/blob/7.x-1.x/modules/farm/farm_acc
                 shortcuts = {"help": 191, "next": 78, "previous": 80, "search": 83};
         </script>
         <script src="../../js/base.js" defer></script>
+        <script src="../../deprecated.js" defer></script>
         <script src="../../search/main.js" defer></script>
 
         <div class="modal" id="mkdocs_search_modal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel" aria-hidden="true">
