--- a/index.html
+++ b/index.html
@@ -430,6 +430,7 @@ and how to contribute back to the project.</p>
                 shortcuts = {"help": 191, "next": 78, "previous": 80, "search": 83};
         </script>
         <script src="js/base.js" defer></script>
+        <script src="deprecated.js" defer></script>
         <script src="search/main.js" defer></script>
 
         <div class="modal" id="mkdocs_search_modal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel" aria-hidden="true">
@@ -497,6 +498,6 @@ and how to contribute back to the project.</p>
 </html>
 
 <!--
-MkDocs version : 1.2.2
-Build Date UTC : 2021-09-23 13:17:56.645015+00:00
+MkDocs version : 1.2.3
+Build Date UTC : 2021-12-20 19:09:43.943186+00:00
 -->
