deploy: 9aa0810618b3fdea0ddebd158fb6a05b1c9fb638

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                             </a>
                         </li>
                             <li class="nav-item">
-                                <a href="https://github.com/farmOS/farmOS.org/edit/7.x-1.x/docs/index.md" class="nav-link"><i class="fa fa-github"></i> Edit on GitHub</a>
+                                <a href="https://github.com/farmOS-legacy/farmOS.org/edit/7.x-1.x/docs/index.md" class="nav-link"><i class="fa fa-github"></i> Edit on GitHub</a>
                             </li>
                     </ul>
                 </div>
@@ -499,5 +499,5 @@ and how to contribute back to the project.</p>
 
 <!--
 MkDocs version : 1.2.3
-Build Date UTC : 2021-12-22 16:17:16.097266+00:00
+Build Date UTC : 2021-12-27 14:54:12.089519+00:00
 -->
