--- a/404.html
+++ b/404.html
@@ -286,7 +286,7 @@
                             </a>
                         </li>
                             <li class="nav-item">
-                                <a href="https://github.com/farmOS/farmOS.org/" class="nav-link"><i class="fa fa-github"></i> GitHub</a>
+                                <a href="https://github.com/farmOS-legacy/farmOS.org/" class="nav-link"><i class="fa fa-github"></i> GitHub</a>
                             </li>
                     </ul>
                 </div>
