--- a/development/configure-local-https-reverse-proxy/index.html
+++ b/development/configure-local-https-reverse-proxy/index.html
@@ -286,7 +286,7 @@
                             </a>
                         </li>
                             <li class="nav-item">
-                                <a href="https://github.com/farmOS/farmOS.org/edit/7.x-1.x/docs/development/configure-local-https-reverse-proxy.md" class="nav-link"><i class="fa fa-github"></i> Edit on GitHub</a>
+                                <a href="https://github.com/farmOS-legacy/farmOS.org/edit/7.x-1.x/docs/development/configure-local-https-reverse-proxy.md" class="nav-link"><i class="fa fa-github"></i> Edit on GitHub</a>
                             </li>
                     </ul>
                 </div>
