--- a/faq/index.html
+++ b/faq/index.html
@@ -296,7 +296,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="https://github.com/farmOS/farmOS.org/edit/7.x-1.x/docs/faq.md" class="nav-link"><i class="fa fa-github"></i> Edit on GitHub</a>
+                                <a href="https://github.com/farmOS-legacy/farmOS.org/edit/7.x-1.x/docs/faq.md" class="nav-link"><i class="fa fa-github"></i> Edit on GitHub</a>
                             </li>
                     </ul>
                 </div>
