deploy: 72960ff5dab090d14f781fa73a3b7232fc3d02e8

--- a/development/configure-local-https-reverse-proxy/index.html
+++ b/development/configure-local-https-reverse-proxy/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         
-        <link rel="canonical" href="http://farmos.org/development/configure-local-https-reverse-proxy/">
+        <link rel="canonical" href="https://v1.farmos.org/development/configure-local-https-reverse-proxy/">
         <link rel="shortcut icon" href="../../img/favicon.ico">
         <title>Configuring a Local Https Reverse Proxy - farmOS.org</title>
         <link href="../../css/bootstrap.min.css" rel="stylesheet">
