--- a/development/issue-queues/index.html
+++ b/development/issue-queues/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         
-        <link rel="canonical" href="http://farmos.org/development/issue-queues/">
+        <link rel="canonical" href="https://v1.farmos.org/development/issue-queues/">
         <link rel="shortcut icon" href="../../img/favicon.ico">
         <title>Issue queues - farmOS.org</title>
         <link href="../../css/bootstrap.min.css" rel="stylesheet">
