--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="None">
         
-        <link rel="canonical" href="http://farmos.org/">
+        <link rel="canonical" href="https://v1.farmos.org/">
         <link rel="shortcut icon" href="img/favicon.ico">
         <title>farmOS.org</title>
         <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -498,6 +498,6 @@ and how to contribute back to the project.</p>
 </html>
 
 <!--
-MkDocs version : 1.2.3
-Build Date UTC : 2021-12-27 14:54:12.089519+00:00
+MkDocs version : 1.4.2
+Build Date UTC : 2022-12-21 20:51:55.805481+00:00
 -->
