--- a/community/contribute/index.html
+++ b/community/contribute/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         
-        <link rel="canonical" href="http://farmos.org/community/contribute/">
+        <link rel="canonical" href="https://v1.farmos.org/community/contribute/">
         <link rel="shortcut icon" href="../../img/favicon.ico">
         <title>Contribute - farmOS.org</title>
         <link href="../../css/bootstrap.min.css" rel="stylesheet">
