--- a/guide/assets/equipment/index.html
+++ b/guide/assets/equipment/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         
-        <link rel="canonical" href="http://farmos.org/guide/assets/equipment/">
+        <link rel="canonical" href="https://v1.farmos.org/guide/assets/equipment/">
         <link rel="shortcut icon" href="../../../img/favicon.ico">
         <title>Equipment - farmOS.org</title>
         <link href="../../../css/bootstrap.min.css" rel="stylesheet">
