--- a/guide/people/index.html
+++ b/guide/people/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         
-        <link rel="canonical" href="http://farmos.org/guide/people/">
+        <link rel="canonical" href="https://v1.farmos.org/guide/people/">
         <link rel="shortcut icon" href="../../img/favicon.ico">
         <title>People - farmOS.org</title>
         <link href="../../css/bootstrap.min.css" rel="stylesheet">
